java8.spoofax3/test/statics/java/interfaces/class-extends-interface.no.spt.bak
module interfaces/class-extends-interface_no

language metaborg-java

test class-extends-interface [[

test;



// error: no interface expected here

[I]
interface I {}

[A]
class A extends I {}

]] analysis fails
   run javacFails to ""
